...
    <variable
      name="viewModel"
      type="org.oppia.android.app.options.OptionsAppLanguageViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/app_language_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/general_item_background_border"
    android:minHeight="48dp"
    android:onClick="@{(v) -> viewModel.onAppLanguageClicked()}"
    android:paddingStart="@dimen/option_app_language_padding_start"
...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:text="@string/app_language"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@id/app_language_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/app_language_text_view"
...
