<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.options.AppLanguageSelectionViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/language_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/app_language_recycler_view_padding_bottom"
    android:scrollbars="none"
    app:data="@{viewModel.recyclerViewAppLanguageList}"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</layout>
