<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.options.OptionControlsViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/options_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_tertiary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:data="@{viewModel.optionsListLiveData}"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</layout>
