<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.options.AudioLanguageSelectionViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/audio_language_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingBottom="@dimen/audio_language_recycler_view_padding_bottom"
      android:scrollbars="none"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:data="@{viewModel.recyclerViewAudioLanguageList}" />

    <View
      android:id="@+id/toolbar_shadow_view"
      android:layout_width="match_parent"
      android:layout_height="6dp"
      android:background="@drawable/toolbar_drop_shadow" />
  </FrameLayout>
</layout>
